--- a/Сбор и анализ требований/static/adr-001.md
+++ b/Сбор и анализ требований/static/adr-001.md
@@ -10,20 +10,20 @@
 
 #### Решения:
 
-* Выбор микросервисной архитектуры для нашей системы уведомлений
+* Выбор монолитной архитектуры для нашей системы
 
 #### Контекст:
-Подсистема уведомлений планируемого масштаба должна справляться с возрастающией нагрузкой и необходимостью в дополнительных интеграциях. В ответ на эти вызовы существует необходимость в более гибкой и масштабируемой архитектуре компонентов.
-Наилучшим вариантом является микросервисная архитектура. Микросервисы предлагают ряд преимуществ перед традиционной монолитной архитектурой. Они разбивают приложение на множество независимых сервисов, каждый из которых выполняет определенную бизнес-функцию и может быть разработан, развернут и масштабирован независимо.
+У нас сравнительно небольшое приложение с низкими требованиями к производительности. Сложность архитектуры микросервисов может оказаться необоснованной в нашем случае.
+Использование монолитной архитектуры предполагает рассматривать приложения как одного цельного блока, что упрощает разработку и тестирование.
 
 #### Последствия:
 
 #### Положительные:
-* отдельные компоненты могут масштабироваться независимо от спроса;
-* более быстрые циклы развёртывания, ведь команды могут обновлять отдельные    сервисы без воздействия на всё приложение;
-* повышенная отказоустойчивость: при сбое одного сервиса это не обязательно влияет на всю систему.
+* простота разработки и тестирования;
+* меньше задержек между внутренними компонентами;
+* простота сопровождения и деплоя.
 
 #### Отрицательные:
-* необходимость управления, мониторинга и логирования для многих сервисов в отличие от одного приложения;
-* риск увеличения задержек из-за интеграции между сервисами, если она спроектирована некорректно;
-* требуются более продвинутые инструменты для оркестрации и навыков, что может потребовать дополнительного обучения.
+* неудобства с масштабированием в будущем;
+* отсутствие гибкости при необходимости внесения изменений;
+* повышенная зависимость компонентов друг от друга.
