--- a/Сбор и анализ требований/static/adr-002.md
+++ b/Сбор и анализ требований/static/adr-002.md
@@ -10,10 +10,10 @@
 
 #### Решения:
 
-* Использование Spring Boot для разработки микросервисов
+* Использование Spring Boot для разработки Backend
 
 #### Контекст:
-Для разработки подсистемы нужна надежная, масштабируемая и производительная технология для разработки микросервисов, которая бы соответствовала весомым требованиям к производительности и была бы хорошо поддерживаемой.
+Для разработки приложения нужна надежная, масштабируемая и производительная технология для разработки, которая бы соответствовала весомым требованиям к производительности и была бы хорошо поддерживаемой.
 После анализа доступных технологий и рынка труда, было принято решение использовать Spring Boot. Spring Boot предлагает простоту создания stateless, production-grade приложений, оно поддерживает авто-конфигурацию, с которой легче начать работать.
 
 #### Последствия:
