--- a/Сбор и анализ требований/static/adr-003.md
+++ b/Сбор и анализ требований/static/adr-003.md
@@ -13,7 +13,7 @@
 * Использование PostgreSQL для нашей базы данных
 
 #### Контекст:
-Для разрабатываемой подсистемы нужна высокопроизводительная, надежная и масштабируемая система управления базами данных (СУБД), которая поддерживает ACID транзакции, имеет богатые возможности SQL и надежную поддержку и обновления.
+Для разрабатываемой системы бронирования парковочных мест нужна надежная система управления базами данных (СУБД), которая поддерживает ACID транзакции, имеет богатые возможности SQL и надежную поддержку и обновления.
 Использование PostgreSQL. PostgreSQL – это мощная объектно-реляционная СУБД с открытым исходным кодом. Она обладает высокой надежностью, данные в ней просто переносить и предназначена для использования в любых масштабах.
 
 #### Последствия:
